# shoddy

./: .gitignore  LICENSE  README.md  pyproject.toml
shoddy/: __init__.py  _version.py  halo_config.py  hod.py  mass_function.py  model.py  profile.py  utils.py
