[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shoddy"
dynamic = ["version"]
description = "HOD tools"
authors = [{name = "Owen Chase", email = "ochase10@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "camb>=1.6",
    "mcfit>=0.0",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.setuptools]
packages = ["shoddy"]

[tool.setuptools.dynamic]
version = {attr = "shoddy._version.__version__"}